--- a/src/components/ColorPicker/ColorPicker.module.css
+++ b/src/components/ColorPicker/ColorPicker.module.css
@@ -1,12 +1,20 @@
-.container {
+.ColorPicker {
   padding: 10px;
+  width: 400px;
+  border: 1px solid black;
 }
-.title {
+.ColorPickerTitle {
   line-height: 1.3;
 }
-.option {
+.ColorPickerOption {
   display: inline-block;
   width: 40px;
   height: 40px;
   margin: 4px;
+  border: none;
+  cursor: pointer;
+  transition: transform 250ms linear;
+}
+.ColorPickerOptionActive {
+  transform: scale(1.2);
 }
